--- a/modules/server/pom.xml
+++ b/modules/server/pom.xml
@@ -50,10 +50,10 @@
       <groupId>org.apache.cxf</groupId>
       <artifactId>cxf-rt-bindings-soap</artifactId>
     </dependency>
-    <dependency>
+    <!--dependency>
       <groupId>org.apache.cxf</groupId>
       <artifactId>cxf-rt-bindings-object</artifactId>
-    </dependency>
+    </dependency-->
     <dependency>
       <groupId>org.apache.cxf</groupId>
       <artifactId>cxf-rt-bindings-coloc</artifactId>
