--- a/modules/client/pom.xml
+++ b/modules/client/pom.xml
@@ -205,7 +205,12 @@
       <groupId>org.jboss.spec.javax.servlet</groupId>
       <artifactId>jboss-servlet-api_3.1_spec</artifactId>
     </dependency>
-    
+
+     <dependency>
+        <groupId>javax.enterprise</groupId>
+        <artifactId>cdi-api</artifactId>
+    </dependency>
+
     <!-- [JBWS-3722] Explicit JAXB dependencies to ensure the dependency management from jbossws-cxf pom.xml applies -->
     <dependency>
       <groupId>org.glassfish.jaxb</groupId>
