--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,7 @@
     <jaspi.api.version>1.0.0.Alpha1</jaspi.api.version>
     <jacc.api.version>1.0.0.Final</jacc.api.version>
     <javax.inject.version>1</javax.inject.version>
+    <javax.enterprise.version>1.2</javax.enterprise.version>
     <modular.jdk.args />
     <modular.jdk.props />
   </properties>
@@ -1240,6 +1241,21 @@
         <groupId>org.easymock</groupId>
         <artifactId>easymockclassextension</artifactId>
         <version>2.4</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.enterprise</groupId>
+        <artifactId>cdi-api</artifactId>
+        <version>${javax.enterprise.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>javax.interceptor</groupId>
+            <artifactId>javax.interceptor-api</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>javax.el</groupId>
+            <artifactId>javax.el-api</artifactId>
+          </exclusion>
+         </exclusions>
       </dependency>
       
       <!-- Other test dependencies -->
