--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
     <jbossws.common.tools.version>1.3.0.Final</jbossws.common.tools.version>
     <jbossws.wildfly1000.version>5.1.4.Final</jbossws.wildfly1000.version>
     <jbossws.wildfly1010.version>5.2.0.Final</jbossws.wildfly1010.version>
-    <jbossws.wildfly1100.version>5.2.0.Final</jbossws.wildfly1100.version>
+    <jbossws.wildfly1100.version>5.2.1-SNAPSHOT</jbossws.wildfly1100.version>
     <wildfly1000.version>10.0.0.Final</wildfly1000.version>
     <wildfly1010.version>10.1.0.Final</wildfly1010.version>
     <wildfly1100.version>11.0.0.Final</wildfly1100.version>
