--- a/modules/test-utils/pom.xml
+++ b/modules/test-utils/pom.xml
@@ -47,6 +47,12 @@
       <type>pom</type>
       <scope>provided</scope>
     </dependency>
+    <dependency> <!-- [WFLY-7373] TODO remove this dependency -->
+      <groupId>org.jboss</groupId>
+      <artifactId>jboss-ejb-client</artifactId>
+      <version>3.0.0.Beta3</version>
+      <scope>provided</scope>
+    </dependency>
     <dependency>
       <groupId>commons-validator</groupId>
       <artifactId>commons-validator</artifactId>
