--- a/pom.xml
+++ b/pom.xml
@@ -100,8 +100,8 @@
     <neethi.version>3.1.1</neethi.version>
     <opensaml.version>3.3.0</opensaml.version>
     <annotation.api.version>1.0.2.Final</annotation.api.version>
-    <saaj.api.version>1.0.6.Final</saaj.api.version>
-    <saaj.impl.version>1.3.16-jbossorg-1</saaj.impl.version>
+    <saaj.api.version>1.0.0.Final</saaj.api.version>
+    <saaj.impl.version>1.4.1.SP1</saaj.impl.version>
     <servlet.api.version>1.0.0.Final</servlet.api.version>
     <stax.api.version>1.0-2</stax.api.version>
     <jms.api.version>1.0.2.Final</jms.api.version>
@@ -540,7 +540,7 @@
 
       <dependency>
         <groupId>org.jboss.spec.javax.xml.soap</groupId>
-        <artifactId>jboss-saaj-api_1.3_spec</artifactId>
+        <artifactId>jboss-saaj-api_1.4_spec</artifactId>
         <version>${saaj.api.version}</version>
       </dependency>
       <dependency>
