--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
     <wildfly1500.version>15.0.0.Final</wildfly1500.version>
     <wildfly1600.version>16.0.0.Final</wildfly1600.version>
     <wildfly1700.version>17.0.0.Final</wildfly1700.version>
-    <wildfly1800.version>18.0.0.Beta1-SNAPSHOT</wildfly1800.version>
+    <wildfly1800.version>18.0.0.Final-SNAPSHOT</wildfly1800.version>
     <ejb.api.version>1.0.1.Final</ejb.api.version>
     <cxf.version>3.3.3</cxf.version>
     <cxf.asm.version>7.1</cxf.asm.version>
