--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: wildfly/wildfly
-          path: './wildfly'
+          path: '../../wildfly'
       - uses: actions/cache@v1
         with:
           path: ~/.m2/repository
