Add conditional check

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,12 +41,12 @@ jobs:
           distribution: 'adopt'
       - name: Build with Maven Java ${{ matrix.java }} on WildFly ${{ matrix.wildfly-version }}
         run: |
-          cd wildfly
-          echo "****** ${{ matrix.wildfly-version }}"
-          mvn -s ../.m2-settings.xml --quiet clean install -DskipTests -Denforcer.skip -Dcheckstyle.skip -Prelease
-          cd ..
-      - name: Build with Maven Java ${{ matrix.java }} on WildFly ${{ matrix.wildfly-version }}
-        run: |
+          if [ ${{ matrix.wildfly-version }} -eq wildfly2400 ]
+          then
+          	cd wildfly
+            mvn -s ../.m2-settings.xml --quiet clean install -DskipTests -Denforcer.skip -Dcheckstyle.skip -Prelease
+            cd ..
+          fi
           mvn -s ./.m2-settings.xml -B -V -fae -P${{ matrix.wildfly-version }} verify
       - uses: actions/upload-artifact@v2
         if: failure()
