Build wildfly conditionally

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,14 +39,14 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
           distribution: 'adopt'
+      - name: Conditionally build WFLY
+        if: ${{ matrix.wildfly-version == 'wildfly2400' }}
+        run: |
+          cd wildfly
+          mvn -s ../.m2-settings.xml --quiet clean install -DskipTests -Denforcer.skip -Dcheckstyle.skip -Prelease
+          cd ..
       - name: Build with Maven Java ${{ matrix.java }} on WildFly ${{ matrix.wildfly-version }}
         run: |
-          if [ ${{ matrix.wildfly-version }} -eq wildfly2400 ]
-          then
-          	cd wildfly
-            mvn -s ../.m2-settings.xml --quiet clean install -DskipTests -Denforcer.skip -Dcheckstyle.skip -Prelease
-            cd ..
-          fi
           mvn -s ./.m2-settings.xml -B -V -fae -P${{ matrix.wildfly-version }} verify
       - uses: actions/upload-artifact@v2
         if: failure()
