--- a/modules/testsuite/pom.xml
+++ b/modules/testsuite/pom.xml
@@ -559,7 +559,7 @@
           <plugin>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-              <redirectTestOutputToFile>true</redirectTestOutputToFile>
+              <redirectTestOutputToFile>false</redirectTestOutputToFile>
             </configuration>
           </plugin>
         </plugins>
