--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: wildfly/wildfly
-          path: '../wildfly'
+          path: './wildfly'
       - uses: actions/cache@v3
         with:
           path: ~/.m2/repository
@@ -50,9 +50,9 @@ jobs:
         if: failure()
         with:
           name: surefire-reports-${{ matrix.os }}-${{ matrix.java }}-${{ matrix.wildfly-version }}
-          path: '${{ github.workspace }}/jbossws-cxf/**/*/surefire-reports/*.*'
+          path: '${{ github.workspace }}/jbossws-cxf/modules/**/*/surefire-reports/*.*'
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: server-logs-${{ matrix.os }}-${{ matrix.java }}-${{ matrix.wildfly-version }}
-          path: '${{ github.workspace }}/jbossws-cxf/**/*.log'
+          path: '${{ github.workspace }}/jbossws-cxf/modules/**/*.log'
