--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -50,7 +50,7 @@ jobs:
         if: failure()
         with:
           name: surefire-reports-${{ matrix.os }}-${{ matrix.java }}-${{ matrix.wildfly-version }}
-          path: '**/surefire-reports/*.txt'
+          path: '**/cxf-tests/target/surefire-reports/*.txt'
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
