Change to minikube

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,11 +19,14 @@ jobs:
         java: ['11']
         profile: ['']
     steps:
-      - name: Setup OpenShift
-        uses: manusa/actions-setup-openshift@v1.1.4
-        with:
-          oc version: 'v3.11.0'
-          github token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Setup Minikube
+          uses: manusa/actions-setup-minikube@v2.7.2
+          with:
+            minikube version: 'v1.28.0'
+            kubernetes version: 'v1.25.4'
+            github token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Interact with the cluster
+          run: kubectl get nodes
       - name: Interact with the cluster
         run: oc cluster status
       - name: Checkout jbossws-cxf
