--- a/modules/testsuite/cloud-tests/pom.xml
+++ b/modules/testsuite/cloud-tests/pom.xml
@@ -18,6 +18,7 @@
         <warName>echo-ws</warName>
         <imageName>jbossws-cxf-cloud-tests</imageName>
         <imageTag>latest</imageTag>
+        <jkube.generator.name>jbossws-cxf-cloud-tests:latest</jkube.generator.name>
     </properties>
 
     <dependencies>
@@ -112,21 +113,15 @@
             </plugin>
             <plugin>
                 <groupId>org.eclipse.jkube</groupId>
-                <artifactId>openshift-maven-plugin</artifactId>
+                <artifactId>kubernetes-maven-plugin</artifactId>
                 <version>1.12.0</version>
-                <configuration>
-                    <verbose>false</verbose>
-                    <images>
-                        <image>
-                            <name>${imageName}:${imageTag}</name>
-                        </image>
-                    </images>
-                </configuration>
                 <executions>
                     <execution>
+                        <id>gen-yaml</id>
                         <phase>pre-integration-test</phase>
                         <goals>
                             <goal>resource</goal>
+                            <goal>apply</goal>
                         </goals>
                     </execution>
                 </executions>
