Initial support for k8s

--- a/modules/testsuite/pom.xml
+++ b/modules/testsuite/pom.xml
@@ -55,9 +55,10 @@
 
   <!-- Modules -->
   <modules>
-    <module>cxf-tests</module>
+    <!--module>cxf-tests</module>
     <module>shared-tests</module>
-    <module>perf-tests</module>
+    <module>perf-tests</module-->
+    <module>cloud-tests</module>
   </modules>
 
   <!-- Dependencies -->
