--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,35 +15,41 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest ]
-        java: ['11','17']
-        profile: ['-Pwildfly28', '']
-
+        os: [ubuntu-latest]
+        java: ['11']
+        profile: ['']
     steps:
-      - name: Checkout jbossws-cxf
-        uses: actions/checkout@v2
-      - name: Checkout wildfly
-        uses: actions/checkout@v2
+      - name: Setup Minikube
+        uses: manusa/actions-setup-minikube@v2.7.2
         with:
-          repository: wildfly/wildfly
-          path: './wildfly'
+          minikube version: 'v1.28.0'
+          kubernetes version: 'v1.25.4'
+          github token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Enable minikube registry
+        run: |
+          minikube addons enable registry
+          kubectl port-forward --namespace kube-system service/registry 5000:80 &
+      - name: Set up JDK ${{ matrix.java }}
+        uses: actions/setup-java@v2
+        with:
+          java-version: ${{ matrix.java }}
+          distribution: 'adopt'
       - uses: actions/cache@v3
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v2
+      - name: Checkout wildfly-cloud-tests
+        uses: actions/checkout@v2
         with:
-          java-version: ${{ matrix.java }}
-          distribution: 'adopt'
-      - name: Build docbook
-        run: mvn -s ./.m2-settings.xml -f docbook/pom.xml install
-      - name: Build WFLY
-        if: ${{ matrix.profile == '-Pwildfly28'}}
-        working-directory: ./wildfly
-        run: mvn -DskipTests=true '-Denforcer.skip=true' -Prelease clean install
+          repository: jimma/wildfly-cloud-tests
+      - name: Build wildfly-cloud-tests
+        run: mvn clean install -DskipTests=true -Pimages
+      - name: Checkout jbossws-cxf
+        uses: actions/checkout@v2
+        with:
+          repository: jimma/jbossws-cxf
       - name: Build with Maven Java ${{ matrix.java }} ${{ matrix.profile }}
         run: |
           mvn -s ./.m2-settings.xml -fae ${{ matrix.profile }} clean install
