--- a/modules/testsuite/cloud-tests/pom.xml
+++ b/modules/testsuite/cloud-tests/pom.xml
@@ -4,7 +4,7 @@
 
     <name>JBoss Web Services - Stack CXF Specific Cloud Tests jakarta</name>
     <artifactId>jbossws-cxf-cloud-tests</artifactId>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
 
     <!-- Parent -->
     <parent>
@@ -13,223 +13,8 @@
         <version>6.2.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-
-    <properties>
-        <warName>echo-ws</warName>
-    </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.jboss.ws.cxf</groupId>
-            <artifactId>jbossws-cxf-client</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>testcontainers</artifactId>
-        </dependency>
-    </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <executions>
-                    <!--combine.self="override" to override configuration from parent pom-->
-                    <execution>
-                        <id>default-test</id>
-                        <phase>test</phase>
-                        <configuration combine.self="override">
-                            <skip>true</skip>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>integration-tests</id>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <configuration combine.self="override">
-                            <includes>
-                                <include>**/*Test.java</include>
-                                <include>**/*TestCase.java</include>
-                            </includes>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>forked-integration-tests</id>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <configuration combine.self="override">
-                            <skip>true</skip>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>unpack</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>unpack</goal>
-                        </goals>
-                        <configuration combine.self="override">
-                            <skip>true</skip>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-war-plugin</artifactId>
-                <configuration>
-                    <warName>${warName}</warName>
-                    <executions>
-                        <execution>
-                            <phase>pre-integration-test</phase>
-                            <goals>
-                                <goal>war</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
-                    <packagingExcludes>WEB-INF/lib/*.jar</packagingExcludes>
-                    <webResources>
-                        <resource>
-                            <directory>${basedir}/target/test-classes</directory>
-                            <targetPath>WEB-INF/classes</targetPath>
-                        </resource>
-                    </webResources>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    <profiles>
-        <profile>
-            <id>docker</id>
-            <activation>
-                <property>
-                    <name>image.builder</name>
-                    <value>docker</value>
-                </property>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.wildfly.plugins</groupId>
-                        <artifactId>wildfly-maven-plugin</artifactId>
-                        <configuration>
-                            <feature-packs>
-                                <feature-pack>
-                                    <location>org.jboss.ws.cxf:jbossws-cxf-feature-pack:${project.version}</location>
-                                </feature-pack>
-                                <feature-pack>
-                                    <location>org.wildfly:wildfly-galleon-pack:${jboss.version}</location>
-                                </feature-pack>
-                            </feature-packs>
-                            <layers>
-                                <layer>cloud-server</layer>
-                                <layer>webservices</layer>
-                            </layers>
-                            <filename>${warName}.war</filename>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>image</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>jib</id>
-            <activation>
-                <property>
-                    <name>image.builder</name>
-                    <value>jib</value>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.wildfly.plugins</groupId>
-                        <artifactId>wildfly-maven-plugin</artifactId>
-                        <configuration>
-                            <feature-packs>
-                                <feature-pack>
-                                    <location>org.jboss.ws.cxf:jbossws-cxf-feature-pack:${project.version}</location>
-                                </feature-pack>
-                                <feature-pack>
-                                    <location>org.wildfly:wildfly-galleon-pack:${jboss.version}</location>
-                                </feature-pack>
-                            </feature-packs>
-                            <layers>
-                                <layer>cloud-server</layer>
-                                <layer>webservices</layer>
-                            </layers>
-                            <filename>${warName}.war</filename>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <phase>pre-integration-test</phase>
-                                <goals>
-                                    <goal>package</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>com.google.cloud.tools</groupId>
-                        <artifactId>jib-maven-plugin</artifactId>
-                        <configuration>
-                            <from>
-                                <image>quay.io/wildfly/wildfly-runtime:latest</image>
-                            </from>
-                            <to>
-                                <image>jbossws-cxf-cloud-tests:latest</image>
-                            </to>
-                            <extraDirectories>
-                                <paths>
-                                    <path>
-                                        <from>target/server</from>
-                                        <into>/opt/server</into>
-                                    </path>
-                                </paths>
-                                <!--TODO: Look at how can we grant permission to data and log dir and use user jboss -->
-                                <permissions>
-                                    <permission>
-                                        <file>/opt/server/**/*</file>
-                                        <mode>770</mode>
-                                    </permission>
-                                </permissions>
-                            </extraDirectories>
-                            <container>
-                                <user>root</user>
-                            </container>
-                        </configuration>
-
-                        <executions>
-                            <execution>
-                                <phase>pre-integration-test</phase>
-                                <goals>
-                                    <goal>dockerBuild</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+    <modules>
+        <module>container</module>
+        <module>k8s</module>
+    </modules>
 </project>
