--- a/modules/testsuite/cloud-tests/k8s/src/test/resources/kubernetes.yml
+++ b/modules/testsuite/cloud-tests/k8s/src/test/resources/kubernetes.yml
@@ -18,8 +18,7 @@ spec:
       containers:
         - name: jbossws-cxf-k8s-tests
           image: localhost:5000/jbossws-cxf-k8s-tests:latest
-          imagePullPolicy: IfNotPresent
-
+          imagePullPolicy: Always
           ports:
             - containerPort: 9990
               name: admin
