--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,9 +22,12 @@ jobs:
       - name: Setup Minikube
         uses: manusa/actions-setup-minikube@v2.7.2
         with:
-          minikube version: 'v1.28.0'
-          kubernetes version: 'v1.25.4'
+          driver: docker
+          container runtime: containerd
+          minikube version: 'v1.26.1'
+          kubernetes version: 'v1.24.3'
           github token: ${{ secrets.GITHUB_TOKEN }}
+          start args: "--memory='4gb' --cpus='2'"
       - name: Enable minikube registry
         run: |
           minikube addons enable registry
