--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,10 +24,9 @@ jobs:
         with:
           driver: docker
           container runtime: containerd
-          minikube version: 'v1.26.1'
-          kubernetes version: 'v1.24.3'
+          minikube version: 'v1.30.1'
           github token: ${{ secrets.GITHUB_TOKEN }}
-          start args: "--memory='4gb' --cpus='2'"
+          start args: "--cpus='2' --memory='4gb'"
       - name: Enable minikube registry
         run: |
           minikube addons enable registry
