--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,8 +25,9 @@ jobs:
           driver: docker
           container runtime: containerd
           minikube version: 'v1.30.1'
+          kubernetes version: 'v1.27.1'
           github token: ${{ secrets.GITHUB_TOKEN }}
-          start args: "--cpus='2' --memory='4gb'"
+          start args: "--memory='4gb' --cpus='2'"
       - name: Enable minikube registry
         run: |
           minikube addons enable registry
