--- a/modules/testsuite/cloud-tests/k8s/basic/src/test/resources/kubernetes.yml
+++ b/modules/testsuite/cloud-tests/k8s/basic/src/test/resources/kubernetes.yml
@@ -3,24 +3,24 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app.kubernetes.io/name: jbossws-cxf-k8s-tests
-  name: jbossws-cxf-k8s-tests
+    app.kubernetes.io/name: jbossws-cxf-k8s-basic
+  name: jbossws-cxf-k8s-basic
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: jbossws-cxf-k8s-tests
+      app.kubernetes.io/name: jbossws-cxf-k8s-basic
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: jbossws-cxf-k8s-tests
+        app.kubernetes.io/name: jbossws-cxf-k8s-basic
     spec:
       volumes:
         - name: deployments
           emptyDir: { }
       containers:
-        - name: jbossws-cxf-k8s-tests
-          image: localhost:5000/wildfly-without-deployment:latest
+        - name: jbossws-cxf-k8s-basic
+          image: localhost:5000/wildfly-webservice:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 9990
@@ -34,7 +34,7 @@ spec:
               mountPath: /opt/server/standalone/deployments
       initContainers:
         - name: init-container
-          image: localhost:5000/jbossws-deployment:latest
+          image: localhost:5000/jbossws-basic-deployment:latest
           volumeMounts:
             - name: deployments
               mountPath: /deployment
@@ -45,8 +45,8 @@ kind: Service
 metadata:
   annotations:
   labels:
-    app.kubernetes.io/name: jbossws-cxf-k8s-tests
-  name: jbossws-cxf-k8s-tests
+    app.kubernetes.io/name: jbossws-cxf-k8s-basic
+  name: jbossws-cxf-k8s-basic
 spec:
   ports:
     - name: http
@@ -56,5 +56,5 @@ spec:
       port: 9990
       targetPort: 9990
   selector:
-    app.kubernetes.io/name: jbossws-cxf-k8s-tests
+    app.kubernetes.io/name: jbossws-cxf-k8s-basic
   type: ClusterIP
