[JBWS-4357]:Add cloud profile to only enable the cloud tests

--- a/modules/testsuite/pom.xml
+++ b/modules/testsuite/pom.xml
@@ -55,10 +55,9 @@
 
   <!-- Modules -->
   <modules>
-    <!--module>cxf-tests</module>
+    <module>cxf-tests</module>
     <module>shared-tests</module>
-    <module>perf-tests</module-->
-    <module>cloud-tests</module>
+    <module>perf-tests</module>
   </modules>
 
   <!-- Dependencies -->
@@ -958,19 +957,6 @@
         <surefire.default-mgmt-serurity.args> </surefire.default-mgmt-serurity.args>
       </properties>
     </profile>
-    <profile>
-      <id>linux</id>
-      <activation>
-        <os>
-          <family>unix</family>
-        </os>
-      </activation>
-      <modules>
-        <module>cloud-tests</module>
-      </modules>
-
-    </profile>
-
   </profiles>
 
 </project>
