[JBWS-4359]:Add a test-feature-pack to easily install the test configuration files into WFLY

--- a/modules/testsuite/cloud-tests/pom.xml
+++ b/modules/testsuite/cloud-tests/pom.xml
@@ -14,6 +14,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modules>
+        <module>test-feature-pack</module>
         <module>container</module>
         <module>k8s</module>
     </modules>
