--- a/modules/testsuite/cloud-tests/k8s/images/pom.xml
+++ b/modules/testsuite/cloud-tests/k8s/images/pom.xml
@@ -95,19 +95,35 @@
                 <configuration>
                     <feature-packs>
                         <feature-pack>
-                            <location>org.jboss.ws.cxf:jbossws-cxf-feature-pack:${project.version}</location>
-                        </feature-pack>
-                        <feature-pack>
                             <location>org.wildfly:wildfly-galleon-pack:${jboss.version}</location>
                         </feature-pack>
                         <feature-pack>
                             <location>org.wildfly.cloud:wildfly-cloud-galleon-pack:2.0.0.Final</location>
+                        </feature-pack>
+                        <!--feature-pack>
+                            <location>org.jboss.ws.cxf:jbossws-cxf-feature-pack:${project.version}</location>
+                            <inherit-configs>false</inherit-configs>
+                            <inherit-packages>true</inherit-packages>
+                        </feature-pack-->
+                        <feature-pack>
+                            <location>org.jboss.ws.cxf:jbossws-cxf-cloud-tests-feature-pack:${project.version}</location>
+                            <inherit-packages>true</inherit-packages>
                         </feature-pack>
                     </feature-packs>
                     <layers>
                         <layer>cloud-server</layer>
                         <layer>webservices</layer>
                     </layers>
+                    <galleon-options>
+                        <jboss-fork-embedded>true</jboss-fork-embedded>
+                    </galleon-options>
+                    <packaging-scripts>
+                        <packaging-script>
+                            <scripts>
+                                <script>src/main/resources/cli/jbws-testsuite-default.cli</script>
+                            </scripts>
+                        </packaging-script>
+                    </packaging-scripts>
                 </configuration>
                 <executions>
                     <execution>
