[JBWS-4361]:Add wsse cloud test

--- a/modules/testsuite/cloud-tests/k8s/pom.xml
+++ b/modules/testsuite/cloud-tests/k8s/pom.xml
@@ -15,5 +15,6 @@
     <modules>
         <module>images</module>
         <module>basic</module>
+        <module>wsse</module>
     </modules>
 </project>
